# separable

./: Cargo.toml  README.md
separable/: Cargo.toml
separable-derive/: Cargo.toml
separable-derive/src/: error.rs  lib.rs
separable/examples/: basic.rs
separable/src/: lib.rs
