[package]
name = "separable"
version = "0.2.0"
description = "Separable trait for enums"
license = "MIT"
authors = ["Carlos Malanche <carlos.malanche.f@gmail.com>"]
repository = "https://github.com/Malanche/separable.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
separable-derive = {path = "../separable-derive", version = "0.2.0"}